# trend-narrative

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  WB-IGO-RIDER.md  _config.yml  pyproject.toml
tests/: test_detector.py  test_extractor.py  test_narrative.py  test_relationship.py  test_relationship_analysis.py  test_translations.py
trend_narrative/: __init__.py  detector.py  extractor.py  narrative.py  relationship.py  relationship_analysis.py  relationship_narrative.py
trend_narrative/translations/: __init__.py  en.py  fr.py
